--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,13 @@ android {
 
 dependencies {
 
+    // Android Libraries
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+
+    // Network Libraries
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 }
