--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.leanback:leanback:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'androidx.fragment:fragment-ktx:1.4.0'
 
     // Network Libraries
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
