--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,8 @@ dependencies {
     // Dependency Injection Libraries
     implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-compiler:2.38.1'
+
+    // Media Libraries:
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
